# the-auto-judge

./: .eslintrc  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: README  env.py
apps/backend/alembic/versions/: 0f1be5216f30_create_initial_schema_models.py  bf3f1bab7a24_add_initial_rls_policies.py
apps/backend/app/: exceptions.py  main.py
apps/backend/app/api/v1/: tasks.py
apps/backend/app/api/v1/auth/: __init__.py  (+5 more)
apps/backend/app/core/: config.py  database.py  deps.py  supabase_client.py
apps/backend/app/middleware/: authentication.py
apps/backend/app/models/: __init__.py  enums.py  problem.py  result.py  submission.py  user.py
apps/backend/app/repository/: problem_repository.py
apps/backend/app/schemas/: __init__.py  auth_schema.py  problem_service_schemas.py
apps/backend/app/services/: problem_service.py
apps/backend/app/workers/: celery_app.py
apps/backend/tests/: conftest.py  test_config.py  test_database.py  test_main.py  test_migrations_rls.py  test_tasks.py
apps/backend/tests/api/: test_exceptions.py  test_main.py
apps/backend/tests/api/auth/: test_auth_routes.py
apps/backend/tests/core/: test_config.py  test_deps.py  test_middleware.py  test_supabase_client.py
apps/backend/tests/migrations/: test_migrations_rls.py
apps/backend/tests/repository/: test_problem_repository.py
apps/backend/tests/services/: test_problem_service.py
apps/backend/tests/workers/: test_tasks.py
(+50 files in other folders)
