[project]
name = "auto-judge-backend"
version = "0.1.0"
description = "Backend environment scaffold for The Auto Judge"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "celery",
    "sqlmodel>=0.0.37",
    "psycopg[binary,pool]>=3.3.3",
    "redis>=7.4.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = false
